--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-security-jwt</artifactId>
+	<groupId>Dashboard</groupId>
+	<artifactId>Dashboard</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-security-jwt</name>
+	<name>Dashboard</name>
 	<description>Dashboard</description>
 
 	<properties>
